<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#F5F5F5">
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/your_item_border"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:paddingBottom="10dp"
	    android:orientation="vertical">
	    
	    <TextView
	        android:textSize="15sp"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        android:textColor="#000000"   
	        android:id="@+id/activity_order_filter_type_tv_all"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/filter_tv_all"/>
	    
	    <TextView 
	        android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:textColor="#000000"
	        android:id="@+id/activity_order_filter_type_tv_baseprovide"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/order_filter_type_tv_baseprovide"/>
	    
	    <TextView 
	            android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_order_filter_type_tv_ready"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/order_filter_type_tv_ready"/>
	    
	    <TextView 
	            android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_order_filter_type_tv_spotgoods"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/order_filter_type_tv_spotgoods"/>
	    
	    <TextView 
	            android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_order_filter_type_tv_service"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/order_filter_type_tv_service"/>
	    
	    <TextView 
	            android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_order_filter_type_tv_home"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/order_filter_type_tv_home"/>
	   
	    
	</LinearLayout>

</RelativeLayout>