<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#F5F5F5"
    >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/your_item_border"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:paddingBottom="10dp"
	    android:orientation="vertical">
	    
	    <TextView
	        android:textSize="15sp"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        android:textColor="#000000"   
	        android:id="@+id/activity_purchase_filter_status_tv_all"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/filter_tv_all"/>
	    
	    <TextView 
	        android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:textColor="#000000"
	        android:id="@+id/activity_purchase_filter_status_tv_createnew"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/purchase_filter_status_tv_createnew"/>
	    
	    <TextView 
	            android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_purchase_filter_status_tv_checked"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/purchase_filter_status_tv_checked"/>
	    
	    <TextView 
	            android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_purchase_filter_status_tv_recall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/purchase_filter_status_tv_recall"/>
	    
	    <TextView 
	         android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_purchase_filter_status_tv_recsome"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/purchase_filter_status_tv_recsome"/>
	    
	    
	    <TextView 
	        android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	         android:textColor="#000000"
	        android:id="@+id/activity_purchase_filter_status_tv_cancel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/filter_status_tv_cancel"/>
	    
	    
	    
	    
	</LinearLayout>
    
</RelativeLayout>