<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
   	>
    
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="100dp"
        android:background="@drawable/your_item_border"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#000000"
            android:text="@string/activity_search_delivery_order_tv"/>
        
        <EditText 
            android:id="@+id/activity_search_delivery_order_et"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:singleLine="true"
            android:text="PK20150706000003"
            android:hint="@string/activity_search_delivery_order_et"/>
        
        <ImageView 
            android:id="@+id/activity_search_delivery_order_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qr_code"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/activity_search_delivery_order_img"
            />
        
    </LinearLayout>

    <Button 
        android:id="@+id/activity_search_delivery_order_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"    
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:text="@string/activity_search_delivery_order_btn"
        android:background="@drawable/button_selector"
        />
</LinearLayout>