<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp"
    android:orientation="vertical" 
    android:background="@drawable/your_item_border">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    
	    <TextView
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_goods_detail_tv_skucode" />
	    
	    <TextView 
	        android:id="@+id/dialog_goods_detail_tv_skucode"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:text=""/>
	    
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="15dp"
	    >

	    <TextView
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_goods_detail_tv_goodscode" />
	    
	    <TextView 
	        android:id="@+id/dialog_goods_detail_tv_goodscode"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:text=""/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="15dp"
	    >

	    <TextView
	          android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_goods_detail_tv_skuname" />
	    
	    <TextView 
	        android:id="@+id/dialog_goods_detail_tv_skuname"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	          android:textColor="#000000"
	        android:text=""/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="15dp"
	    >

	    <TextView
	      android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_goods_detail_tv_outqty" />
	    
	    <TextView 
	        android:id="@+id/dialog_goods_detail_tv_outqty"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	          android:textColor="#000000"
	        android:text=""/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="15dp"
	    >
	    <TextView 
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:text="@string/dialog_goods_detail_tv_unit"/>
	    
	    <TextView 
	        android:id="@+id/dialog_goods_detail_tv_unit"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	          android:textColor="#000000"
	        android:text=""/>
	</LinearLayout>
    
</LinearLayout>