<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#F5F5F5">
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/fragment_mine_title_tv"
        android:textSize="15sp"
        android:textColor="#000000"
        android:background="#FFFFFF"
        android:gravity="center"/>
    
	<TableLayout 
	    android:layout_marginTop="20dp"
	     android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:padding="10dip" 
	    >
	    
	     <!-- 表格布局：第一行 -->  
        <TableRow  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:background="@drawable/shape_no_corner_without_bottom"  
            android:padding="10dip" >  
            <TextView  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:layout_gravity="center_vertical"  
                android:layout_marginRight="10dip"  
                android:text="@string/fragment_mine_name_tv" >  
            </TextView>  
            <TextView 
                android:id="@+id/fragment_mine_name_tv"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text=""
                />
        </TableRow>  
        <!-- 表格布局：第二行 -->  
        <TableRow  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:background="@drawable/shape_no_corner_without_bottom"  
            android:padding="10dip" >  
            <TextView  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:layout_gravity="center_vertical"  
                android:layout_marginRight="10dip"  
                android:text="@string/fragment_mine_org_tv" >  
            </TextView>  
            <TextView 
                android:id="@+id/fragment_mine_org_tv"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text=""
                />
            
        </TableRow> 
	</TableLayout>
  	
	<Button  
        android:id="@+id/fragment_mine_btn"  
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:layout_gravity="center"  
        android:background="@drawable/your_button_border"
        android:textColor="#FF3300"
        android:text="@string/fragment_mine_btn" />  

</LinearLayout>