<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#F5F5F5"
   android:paddingTop="20dp"
   android:paddingLeft="20dp"
   android:paddingRight="20dp"
    >
    
    
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/your_item_border">
        
        <!-- 第一行 -->
        <TableRow 
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_delivery_order_info_tv_outno"
                android:textSize="15sp"
                />
            
             <TextView 
                android:id="@+id/activity_delivery_order_info_tv_outno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="#000000"
                android:textSize="15sp"
                />
        </TableRow>
        <!-- 第二行 -->
      <TableRow 
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_delivery_order_info_tv_shopname"
                android:textSize="15sp"
                />
         
             <TextView 
                 android:id="@+id/activity_delivery_order_info_tv_shopname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                  android:textColor="#000000"
                android:textSize="15sp"
                />
        </TableRow>
        <!-- 第三行 -->
        <TableRow 
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_delivery_order_info_tv_ordercnt"
                android:textSize="15sp"
                />
            
             <TextView 
                 android:id="@+id/activity_delivery_order_info_tv_ordercnt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                  android:textColor="#000000"
                android:textSize="15sp"
                />
        </TableRow>
        <!-- 第四行 -->
        <TableRow 
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_delivery_order_info_tv_goodssum"
                android:textSize="15sp"
                />
            
             <TextView 
                 android:id="@+id/activity_delivery_order_info_tv_goodssum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                  android:textColor="#000000"
                android:textSize="15sp"
                />
        </TableRow>
        <!-- 第五行 -->
        <TableRow 
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_delivery_order_info_tv_totalgoodssum"
                android:textSize="15sp"
                />
            
             <TextView 
                android:id="@+id/activity_delivery_order_info_tv_totalgoodssum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                  android:textColor="#000000"
                android:textSize="15sp"
                />
        </TableRow>
    </TableLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"    
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/your_item_border"
        >
      
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_delivery_order_info_tv_goodslist"
                android:textSize="15sp"
                />
            
             <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                
                android:text="@string/activity_delivery_order_info_tv_count"
                android:textSize="15sp"
                />
            
        </LinearLayout>
         

         
              <ListView
                  android:id="@+id/activity_delivery_order_info_lv"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" >
				</ListView>
            
    </LinearLayout>
     		

</LinearLayout>