<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5" >
    
	<TableLayout 
	    android:layout_marginTop="30dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <!-- 第一行 -->
	    
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/your_tablerow_border"
	        android:padding="10dp"
	       >
	        
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:src="@drawable/login_user"/>
	        
	        <EditText 
	            android:id="@+id/activity_login_name_et"
	            android:layout_gravity="center_vertical"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="number"
	            android:hint="@string/activity_login_name_et_hint"
	            android:text="13146403211"
	            android:layout_marginLeft="8dp"/>
	    </TableRow>
	    
	    <!-- 第二行 -->
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	         android:background="@drawable/your_tablerow_border"
	        android:padding="10dp"
	        >
	        
	        
	         <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:src="@drawable/login_key"/>
	        
	        <EditText 
	            android:id="@+id/activity_login_pwd_et"
	            android:layout_gravity="center_vertical"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	           android:inputType="textPassword"
	            android:hint="@string/activity_login_pwd_et_hint"
	            android:text="qqqq"
	            android:layout_marginLeft="8dp"/>
	    </TableRow>
	</TableLayout>
	
	<Button
	    android:layout_marginTop="50dp" 
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:gravity="center"
	    android:textColor="#FFFFFF"
	    android:background="@drawable/button_selector"
	    android:onClick="login"
	    android:textSize="20sp"
	    android:text="@string/activity_login_btn"/>
    
</LinearLayout>